# NewMCGame

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CODEBITS.md  README.md  TODO.md
resources/: TextAtlas.xcf
resources/blockPacks/: base.toml
resources/cplugins/: README.md
resources/mods/BlockPackViewer/: BlockPackViewer.cpp  BlockPackViewer.hpp
resources/mods/WorldGen/: WorldGen.cpp  WorldGen.hpp
resources/mods/WorldGen/WorldGenWorker/: WorldGenWorker.cpp  WorldGenWorker.hpp
resources/mods/WorldInfoSign/: WorldInfoSign.cpp  WorldInfoSign.hpp
resources/mods/XBoxJoystick/: XBoxJoystick.cpp  XBoxJoystick.hpp
resources/plugins/ExtraDebug/: ExtraDebug.cpp  ExtraDebug.hpp
resources/plugins/WorldInfoSign/: WorldInfoSign.cpp  WorldInfoSign.hpp
resources/plugins/XBoxJoystick/: XBoxJoystick.cpp  XBoxJoystick.hpp
resources/plugins/extraDebug/: ExtraDebug.cpp
resources/shaders/: billboardFragment.glsl  billboardVertex.glsl  fragment.glsl  lineFragment.glsl  lineVertex.glsl  vertex.glsl
resources/shaders/billboard/: fragment.glsl  vertex.glsl
resources/shaders/debug/: vertex.glsl
resources/shaders/hudText/: fragment.glsl  vertex.glsl
resources/shaders/world/: fragment.glsl  vertex.glsl
src/: GameClientMain.cpp  GameServerMain.cpp  main.cpp
src/forlater/BlockDB/: BlockDB.cpp  BlockDB.hpp
src/forlater/ModManager/: ModManager.cpp  ModManager.hpp
src/forlater/billboardManager/: billboardManager.cpp
src/forlater/billboardManager/billboard/: billboard.cpp  billboard.hpp
src/forlater/hudTextManager/hudTextItem/: hudTextItem.cpp  hudTextItem.hpp
src/forlater/ray/: ray.hpp
src/game/: game.cpp  game.hpp
src/game/GameClient/: GameClient.cpp  GameClient.hpp
src/game/GameClient/ChunkMesh/: ChunkMesh.hpp
src/game/GameClient/glHelpers/shader/: shader.cpp
src/game/GameClient/glHelpers/texture/: texture.cpp
src/game/GameServer/: GameServer.cpp  GameServer.hpp
src/game/GameServer/player/: player.cpp  player.hpp
src/game/GameServer/world/: world.cpp  world.hpp
src/game/GameServer/world/chunk/: chunk.cpp  chunk.hpp
src/game/GameServer/world/chunk/block/: block.cpp  block.hpp
src/game/ModManager/: ModManager.cpp
src/game/ModManager/include/: IMod.hpp
src/game/Multiplayer/: MessageTypes.hpp  TSQueue.hpp  Types.hpp
src/game/ScreenOverlays/: ScreenOverlays.cpp  ScreenOverlays.hpp
src/game/billboardManager/: billboardManager.cpp  billboardManager.hpp
src/game/billboardManager/billboard/: billboard.cpp  billboard.hpp
src/game/hudTextManager/: hudTextManager.cpp
src/game/old/hudTextManager/: hudTextManager.cpp  hudTextManager.hpp
src/game/old/hudTextManager/hudTextItem/: hudTextItem.cpp
src/game/player/: player.cpp  player.hpp
src/game/player/ray/: ray.cpp  ray.hpp
src/game/pluginManager/: pluginManager.cpp  pluginManager.hpp
src/game/pluginManager/include/: IPlugin.hpp
src/game/plugins/include/: IPlugin.hpp
src/game/plugins/modules/XBoxJoystick/: XBoxJoystick.cpp  XBoxJoystick.hpp
src/game/shader/: shader.cpp  shader.hpp
src/game/texture/: texture.cpp  texture.hpp
src/game/types/: types.hpp
src/game/utils/: NotCopyable.hpp  path.cpp  path.hpp
src/game/utils/QuickNumMap/: QuickNumMap.hpp
src/game/utils/getEnvVar/: getEnvVar.cpp  getEnvVar.hpp
src/game/utils/logger/: logger.hpp
src/game/world/: world.cpp  world.hpp
src/game/world/BlockDB/: BlockDB.cpp  BlockDB.hpp
src/game/world/chunk/: chunk.cpp  chunk.hpp
src/game/world/chunk/ChunkMesh/: ChunkMesh.cpp  ChunkMesh.hpp
src/game/world/chunk/block/: block.cpp  block.hpp
src/game/world/debug/: ChunkBorderDebugger.cpp  ChunkBorderDebugger.hpp
src/glHelpers/shader/: shader.cpp  shader.hpp
src/glHelpers/texture/: texture.cpp  texture.hpp
src/glHelpers/utils/: basicGfxInit.cpp  basicGfxInit.hpp
src/glHelpers/utils/getEnvVar/: getEnvVar.cpp  getEnvVar.hpp
src/glHelpers/utils/getResourcePaths/: getResourcePaths.cpp  getResourcePaths.hpp
src/glHelpers/utils/logger/: logger.cpp
